# SKARK2

./: README.md  pyproject.toml
skark-website/: main.py
skark-website/templates/: index.html
skark_website/: main.py
templates/: index.html
