[tool.poetry]
name = "skark-website"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gunicorn = "^20.1"

[tool.poetry.scripts]
start = "skark_website.main:app"  # Entry point for your app

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
