[tool.poetry]
name = "skark-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.3.3"
# Add other dependencies here

[tool.poetry.dev-dependencies]
# Add development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = [{ include = "skark-website" }]
